(executable
	(name naive_mat_mul)
	(modules naive_mat_mul)
	(libraries domainslib))

(executable
	(name strassen_mat_mul)
	(modules strassen_mat_mul)
	(libraries domainslib))

(executable
	(name canon_mat_mul)
	(modules canon_mat_mul)
	(libraries domainslib))

(executable
	(name para_mat_mul)
	(modules para_mat_mul)
	(libraries domainslib))